--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/x-date-pickers-pro": "^7.24.1",
     "apexcharts": "^3.52.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "history": "^5.3.0",
     "react": "^18.3.1",
